@@ -4,6 +4,8 @@
 
 === 1.0.21 ===
 * Fixed reading of 32-bit FLOAT WAV files that do not contain fact chunk on Windows.
+* Implemented io::Path::final_path method for obtaining the final file system object
+  the abstract path points to.
 
 === 1.0.20 ===
 * More detailed MIDI specification (added MIDI_CHANNELS constant).
